add another files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -117,3 +117,11 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/GM_GOM.GM_GOM_C
+EditorStartupMap=/Game/NewMap.NewMap
+GameDefaultMap=/Game/NewMap.NewMap
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=VisualStudio2017
+
